# Raito-Server

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  config_template.json  dockerfile
.github/workflows/: ci.yml  main.yml
doc/: README.md  web_api.md
src/: main.cc
src/drivers/: ActiveAdapter.cc
src/drivers/ActiveAdapter/: ActiveAdapter.cc
src/drivers/DM5/: DM5.cc  DM5.hpp  converter.hpp  utils.cc
src/drivers/MHG/: MHG.cc  MHG.hpp  node.hpp  utils.cc
src/drivers/MHR/: MHR.cc  MHR.hpp  utils.cc
src/drivers/activeAdapter/: activeAdapter.cc  activeAdapter.hpp
src/drivers/dm5/: dm5.cc  dm5.hpp  node.hpp  utils.cc
src/drivers/mhg/: mhg.cc  mhg.hpp  utils.cc
src/drivers/mhr/: mhr.cc  mhr.hpp  utils.cc
src/drivers/selfContained/: selfContained.cc  selfContained.hpp
src/manager/: DriversManager.cc  DriversManager.hpp  ImagesManager.cc  ImagesManager.hpp  accessGuard.cc  accessGuard.hpp  driversManager.cc  driversManager.hpp  imagesManager.cc  imagesManager.hpp
src/models/: ActiveDriver.hpp  BaseDriver.hpp  Common.hpp  Manga.hpp  baseDriver.hpp  common.hpp  localDriver.hpp  manga.hpp
src/server/: crow.cc  crow.hpp  drogon.cc  drogon.hpp
src/utils/: base64.hpp  converter.hpp  log.hpp  mimeTypes.h  node.hpp  utils.hpp
